@@ -119,10 +119,10 @@ def port_of_liveserver(request):
         pytest.skip("not running functional tests in --fast mode")
     port = random.randint(2001, 64000)
     clientdir = request.config._tmpdirhandler.mktemp("liveserver")
-    subprocess.check_call(["devpi-server", "--datadir", str(clientdir),
+    subprocess.check_call(["devpi-server", "--serverdir", str(clientdir),
                              "--port", str(port), "--start"])
     def stop():
-        subprocess.check_call(["devpi-server", "--datadir", str(clientdir),
+        subprocess.check_call(["devpi-server", "--serverdir", str(clientdir),
                                  "--stop"])
     request.addfinalizer(stop)
     return port
